--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,6 @@ include(cmake/HunterGate.cmake)
 HunterGate(
     URL "https://github.com/ruslo/hunter/archive/v0.23.71.tar.gz"
     SHA1 "5342b852c620cf482144a4edf2686b4a64d68cda"
-    LOCAL
 )
 
 project(aws-lambda-runtime
@@ -47,7 +46,7 @@ target_include_directories(${PROJECT_NAME} PUBLIC
 
 
 hunter_add_package(CURL)
-find_package(CURL REQUIRED)
+find_package(CURL CONFIG REQUIRED)
 target_link_libraries(${PROJECT_NAME} PRIVATE CURL::libcurl)
 
 if(HAVE_BACKTRACE)
