--- a/cmake/Config.cmake.in
+++ b/cmake/Config.cmake.in
@@ -1,3 +1,6 @@
+@PACKAGE_INIT@
+
+find_package(CURL CONFIG REQUIRED)
 include(${CMAKE_CURRENT_LIST_DIR}/@CMAKE_PROJECT_NAME@-targets.cmake)
 
 set(AWS_LAMBDA_PACKAGING_SCRIPT ${CMAKE_CURRENT_LIST_DIR}/packager)
@@ -14,3 +17,4 @@ function(aws_lambda_package_target target)
         DEPENDS ${target})
 endfunction()
 
+check_required_components("@CMAKE_PROJECT_NAME@")
